export type Group = {
  name: string;
  description: string | null;
  createdAt: Date;
};
